--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 <body>
   <h1>You're Invited!</h1>
   <p>Please join us as we celebrate the marriage of</p>
-  <p>Abhisekh and simran </p>
-  <p>on Saturday, the tenth of march</p>
-  <p>at amgaon six in the evening</p>
-  <p>Mahalaxmi Lawn</p>
-  <p>Gondia road</p>
-  <p>Amgaon,Dst. Gondia</p>
-</body>
+  <p>Vivek and nikita </p>
+  <p>on Saturday, the 10th of march</p>
+  <p>at hotel grand sita six in the evening</p>
+  <p>kudwa road, gondia </p>
+  </body>
 </html>
