--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Wedding Invitation</title>
+  <style>
+    body {
+      background-color: #F8D1CC;
+    }
+    h1 {
+      text-align: center;
+      font-size: 50px;
+      font-family: 'Courier New', Courier, monospace;
+      color: #8B0000;
+      text-shadow: 2px 2px #FFF;
+    }
+    .invitation {
+      width: 600px;
+      margin: 50px auto;
+      background-color: #FFFFFF;
+      padding: 30px;
+      border: 5px solid #8B0000;
+      border-radius: 15px;
+      box-shadow: 2px 2px #8B0000;
+    }
+    .details {
+      font-size: 20px;
+      font-family: Arial, sans-serif;
+      color: #8B0000;
+      text-align: center;
+    }
+    .RSVP {
+      text-align: center;
+      font-size: 18px;
+      font-family: Arial, sans-serif;
+      color: #8B0000;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>You're Invited!</h1>
-  <p>Please join us as we celebrate the marriage of</p>
-  <p>Vivek and nikita </p>
-  <p>on Saturday, the 10th of march</p>
-  <p>at hotel grand sita six in the evening</p>
-  <p>kudwa road, gondia </p>
-  </body>
+  <div class="invitation">
+    <div class="details">
+      <p>Join us as we celebrate the union of</p>
+      <p>Abhisekh Tembhare and Megha Thakur </p>
+      <p>on Saturday, the 15th of Feb</p>
+      <p>at 6:00 PM</p>
+      <p>At. mahalaxmi Lawn</p>
+      <p>Amgaon, Dist.Gondia</p>
+    </div>
+  </div>
+</body>
 </html>
