--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wedding Invitation</title>
+  <title>Dear Aliya</title>
   <style>
     body {
       background-color: #F8D1CC;
@@ -13,7 +13,7 @@
       color: #8B0000;
       text-shadow: 2px 2px #FFF;
     }
-    .invitation {
+    .message {
       width: 600px;
       margin: 50px auto;
       background-color: #FFFFFF;
@@ -22,32 +22,51 @@
       border-radius: 15px;
       box-shadow: 2px 2px #8B0000;
     }
-    .details {
+    .message-text {
       font-size: 20px;
       font-family: Arial, sans-serif;
       color: #8B0000;
       text-align: center;
     }
-    .RSVP {
-      text-align: center;
-      font-size: 18px;
-      font-family: Arial, sans-serif;
-      color: #8B0000;
-      text-decoration: underline;
+    .heart {
+        position: absolute;
+        top:200px;
+        left:50%;
+        width: 100px;
+        height: 100px;
+        background-color: #ff69b4;
+        -moz-border-radius: 50px 50px 0 50px;
+        -webkit-border-radius: 50px 50px 0 50px;
+        border-radius: 50px 50px 0 50px;
+        transform: rotate(-45deg);
+    }
+    .heart:before,
+    .heart:after {
+        content: "";
+        position: absolute;
+        background: inherit;
+        border-radius: inherit;
+    }
+    .heart:before {
+        width: 100%;
+        height: 100%;
+    }
+    .heart:after {
+        width: 80%;
+        height: 80%;
+        top: 10%;
+        left: 10%;
     }
   </style>
 </head>
 <body>
-  <h1>You're Invited!</h1>
-  <div class="invitation">
-    <div class="details">
-      <p>Join us as we celebrate the union of</p>
-      <p>Abhisekh Tembhare and Megha Thakur </p>
-      <p>on Saturday, the 15th of Feb</p>
-      <p>at 6:00 PM</p>
-      <p>At. mahalaxmi Lawn</p>
-      <p>Amgaon, Dist.Gondia</p>
+  <h1>My Love</h1>
+  <div class="heart"></div>
+  <div class="message">
+    <div class="message-text">
+      <p>My dear Aliya,</p>
+      <p>I just wanted to take a moment to tell you how much you mean to me. You have brought so much love, joy, and happiness into my life, and I am so grateful to have you by my side. I love you more than words can say and I cannot wait to see what the future holds for us.</p>
+      <p>Forever and always, Mayur</p>
     </div>
   </div>
 </body>
-</html>
