--- a/index.html
+++ b/index.html
@@ -39,24 +39,7 @@
         -webkit-border-radius: 50px 50px 0 50px;
         border-radius: 50px 50px 0 50px;
         transform: rotate(-45deg);
-    }
-    .heart:before,
-    .heart:after {
-        content: "";
-        position: absolute;
-        background: inherit;
-        border-radius: inherit;
-    }
-    .heart:before {
-        width: 100%;
-        height: 100%;
-    }
-    .heart:after {
-        width: 80%;
-        height: 80%;
-        top: 10%;
-        left: 10%;
-    }
+  
   </style>
 </head>
 <body>
@@ -64,7 +47,7 @@
   <div class="heart"></div>
   <div class="message">
     <div class="message-text">
-      <p>My dear Aliya,</p>
+      <p>My dear Aliya</p>
       <p>I just wanted to take a moment to tell you how much you mean to me. You have brought so much love, joy, and happiness into my life, and I am so grateful to have you by my side. I love you more than words can say and I cannot wait to see what the future holds for us.</p>
       <p>Forever and always, Mayur</p>
     </div>
