--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="message">
     <div class="message-text">
       <p>My dear Aliya</p>
-      <p>I just wanted to take a moment to tell you how much you mean to me. You have brought so much love, joy, and happiness into my life, and I am so grateful to have you by my side. I love you more than words can say and I cannot wait to see what the future holds for us.</p>
+      <p>I just wanted to take a moment to tell you how much you mean to me. You have brought so much love, joy, and happiness into my life, and I am so grateful to have you by my side. I love you more than words can say .</p>
       <p>Forever and always, Mayur</p>
     </div>
   </div>
